# cpp-space-telemetry-ground-station

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/: ground_station.cpp  satellite_simulator.cpp
benchmarks/: benchmark_decode.cpp  run_benchmark.sh
docs/: PERFORMANCE_REPORT.md  TECHNICAL_DESIGN.md  stgs_code_review_recruiter_en.tex  stgs_code_review_recruiter_fr.tex  stgs_technical_recruiter_en.tex  stgs_technical_recruiter_fr.tex
include/stgs/: BlockingQueue.hpp  ByteUtils.hpp  Crc32.hpp  FrameCodec.hpp  Logger.hpp  NetworkServer.hpp  Replay.hpp  StationHealth.hpp  TelemetryFrame.hpp
src/: Crc32.cpp  FrameCodec.cpp  Logger.cpp  NetworkServer.cpp  Replay.cpp  StationHealth.cpp
tests/: test_main.cpp
